# ini_parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  doxyfile
include/: inip.hpp
src/: CMakeLists.txt  ini_cpp  ini_parser  ini_parser.cpp  inip.cpp
src/ini_parser.dSYM/Contents/: Info.plist
src/ini_parser.dSYM/Contents/Resources/DWARF/: ini_parser
test/: Interface.ini
